# finalproj

./: Cargo.toml  FinalProj_RAFDB.ipynb  README.md  Test Scratch Work.xlsx  adjacent.rs  create.rs  daily_asset_prices.csv  final proj test.csv  main.rs
