workspace = { members = [] }
[package]
name = "final_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.136"
polars = "0.39.2"
petgraph = "0.6.4"
rand = "0.8.5"
ndarray = "0.15.6"

